<resources>

    <string name="app_name">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="load_more_movies">Load More Movies</string>

    <!-- Detail Activity-->
    <string name="detail_also_known_as_label">Also known as:</string>
    <string name="detail_place_of_origin_label">Place of origin:</string>
    <string name="detail_description_label">Description:</string>
    <string name="detail_ingredients_label">Ingredients:</string>

    <!-- Content description-->
    <string name="movie_poster_description">Movie Poster</string>

    <string name="movie_original_title">Original Title</string>
    <string name="movie_plot_synopsis">Plot Synopsis</string>
    <string name="movie_average_vote">Average Vote</string>
    <string name="movie_release_date">Release Date</string>

    <!-- Error messages-->
    <string name="detail_error_message">Movie data not available</string>

</resources>