<?xml version="1.0" encoding="utf-8"?>

<!-- The menu found on Movies Grid View  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/popular_movies"
        android:orderInCategory="1"
        android:title="@string/app_name"
        app:showAsAction="never"/>

    <item
        android:id="@+id/top_rated_movies"
        android:orderInCategory="2"
        android:title="@string/top_rated_movies"
        app:showAsAction="never" />

    <item
        android:id="@+id/load_more_movies"
        android:orderInCategory="3"
        android:title="@string/load_more_movies"
        app:showAsAction="never"  />

</menu>